# arrayfire-js

./: .eslintrc  .gitignore  .gitmodules  .jshintrc  .npmignore  404.html  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  LICENSE  README.md  changelog.md  gulpfile.js  index.html  package.json  runTests.js  sitemap.xml  typings.json
AFArray/: index.html
CMake/: WinCUDASupport.cmake
Col/: index.html
Cols/: index.html
Complex/: index.html
Dim4/: index.html
Row/: index.html
Rows/: index.html
Seq/: index.html
Slice/: index.html
Slices/: index.html
afArray/: index.html
create/: index.html
devices/: index.html
documentation/: mkdocs.yml
documentation/docs/: AFArray.md  Col.md  Cols.md  Complex.md  Dim4.md  Row.md  Rows.md  Seq.md  Slice.md  Slices.md  afArray.md  create.md  devices.md  enums.md  helpers.md  index.md  statics.md
dtype/: index.html
enums/: index.html
examples/es5/bechmarks/: pi.js  pi.js.map
examples/es5/common/: index.js  index.js.map
examples/es5/machine-learning/: ann.js  ann.js.map  mnist.js  mnist.js.map  neuralNetwork.js  neuralNetwork.js.map
examples/es6/bechmarks/: pi.js
examples/es6/common/: index.js
examples/es6/machine-learning/: ann.js  mnist.js  neuralNetwork.js
examples/es6/machinelearning/: mnist.js
helpers/: index.html
lib/: ext.js  index.js  source.js
lib/es5/: AFArray.js  AFArray.js.map  ArrayFire.js  ArrayFire.js.map  Col.js  Col.js.map  Cols.js  Cols.js.map  Dim4.js  Dim4.js.map  Idx.js  Idx.js.map  Row.js  Row.js.map  Rows.js  Rows.js.map  Seq.js  Seq.js.map  arrayIndexing.js  arrayIndexing.js.map  borderType.js  borderType.js.map  cSpace.js  cSpace.js.map  col.js  col.js.map  cols.js  cols.js.map  complex.js  complex.js.map  connectivity.js  connectivity.js.map  convDomain.js  convDomain.js.map  convMode.js  convMode.js.map  create.js  create.js.map  device.js  device.js.map  (+39 more)
lib/es5/doc/: afArray.js  afArray.js.map
lib/es6/: AF.js  AFArray.js  ArrayFire.js  Col.js  Cols.js  Dim4.js  Idx.js  Row.js  Rows.js  Seq.js  arrayIndexing.js  borderType.js  cSpace.js  col.js  cols.js  complex.js  connectivity.js  convDomain.js  convMode.js  create.js  device.js  dim4.js  dtype.js  enums.js  errors.js  ext.js  helpers.js  index.js  interpType.js  makeGfor.js  matProp.js  matchType.js  normType.js  row.js  rows.js  scope.js  seq.js  source.js  tmp.js  typedefs.js  (+1 more)
lib/es6/doc/: afArray.js
mkdocs/: search_index.json
source/: index.html
src/: af.cpp  af.h  arrayhelperfunctions.cpp  arrayhelperfunctions.h  arrayorproxyholder.cpp  arrayorproxyholder.h  arraywrapper.cpp  arraywrapper.h  computervision.cpp  computervision.h  constructarray.cpp  constructarray.h  createarray.cpp  createarray.h  device.cpp  device.h  errors.h  ext.h  fire.cpp  fire.h  functionhelpers.h  guard.cpp  guard.h  helpers.cpp  helpers.h  imageprocessing.cpp  imageprocessing.h  linearalgebra.cpp  linearalgebra.h  mathfunctions.cpp  mathfunctions.h  moveandreorderarray.cpp  moveandreorderarray.h  signalprocessing.cpp  signalprocessing.h  statistics.cpp  statistics.h  symbols.cpp  symbols.h  types.h  (+4 more)
src/init/: init_CPU.cpp  init_CUDA.cpp  init_OpenCL.cpp
statics/: index.html
test/: index.js
test/es5/: array.js  array.js.map  device.js  device.js.map  index.js  index.js.map  unified.js  unified.js.map
test/es6/: array.js  device.js  index.js  unified.js
tests/: afArrayTests.js  deviceTests.js  index.js
tests/es5/: afArrayTests.js  afArrayTests.js.map  createArrayFunctionTests.js  createArrayFunctionTests.js.map  deviceTests.js  deviceTests.js.map  gfor.js  gfor.js.map  index.js  index.js.map  mathFunctionTests.js  mathFunctionTests.js.map  moveAndReorderArrayTests.js  moveAndReorderArrayTests.js.map  testExec.js  testExec.js.map  testHelpers.js  testHelpers.js.map
tests/es6/: afArrayTests.js  createArrayFunctionTests.js  deviceTests.js  gfor.js  index.js  mathFunctionTests.js  moveAndReorderArrayTests.js  testExec.js  testHelpers.js
typings/: index.d.ts
typings/globals/semver/: index.d.ts  typings.json
